--- a/wishes/pages/profit/profitHome/index.wxml
+++ b/wishes/pages/profit/profitHome/index.wxml
@@ -1,77 +1,126 @@
-<view class="profit-container">
-    <view class="profit-header">
-        <view class="profit-header-pro">
-            <view>
-                <text class="clue">利润合计:</text>
-                <text class="info">{{profitTotal.sum.subtotalProfitSum}}</text>
-            </view>
-            <view>
-                <text class="clue">分成合计:</text>
-                <text class="info">{{profitTotal.sun.subtotalYingSum}}</text>
-            </view>
-        </view>
-        <view class="profit-header-total">
-            <view>
-                <text class="clue">分润合计:</text>
-                <text class="info">{{profitTotal.sum.subtotalShareum}}</text>
-            </view>
-            <view>
-                <text class="clue">实际利润:</text>
-                <text class="info">{{profitTotal.sum.subtotalActualSum}}</text>
-            </view>
-        </view>
-        <view class="profit-header-bill">
-            <view class="profit-bill-electro">
+<view class="profit-container {{personalData.uType ==1 || personalData.uType ==2 ? 'fen-text-cent' : ''}}">
+    <block wx:if="{{personalData.plusType==1 && personalData.uType==0}}">
+        <view class="profit-header">
+            <view class="profit-header-pro">
                 <view>
-                    <text class="clue">半年电票利润:</text>
-                    <text class="info">{{profitTotal.electroHalfYearMoneyTotal}}</text>
+                    <text class="clue">利润合计:</text>
+                    <text class="info">{{profitTotal.sum.subtotalProfitSum}}</text>
                 </view>
                 <view>
-                    <text class="clue">一年电票利润:</text>
-                    <text class="info">{{profitTotal.electroYearMoneyTotal}}</text>
+                    <text class="clue">分成合计:</text>
+                    <text class="info">{{profitTotal.sun.subtotalYingSum}}</text>
                 </view>
             </view>
-            <view class="profiy-bill-finance">
+            <view class="profit-header-total">
                 <view>
-                    <text class="clue">半年财票利润:</text>
-                    <text class="info">{{profitTotal.financeHalfYearMoneyTotal}}</text>
+                    <text class="clue">分润合计:</text>
+                    <text class="info">{{profitTotal.sum.subtotalShareum}}</text>
                 </view>
                 <view>
-                    <text class="clue">一年财票利润:</text>
-                    <text class="info">{{profitTotal.financeYearMoneyTotal}}</text>
+                    <text class="clue">实际利润:</text>
+                    <text class="info">{{profitTotal.sum.subtotalActualSum}}</text>
                 </view>
             </view>
-            <view class="profiy-bill-business">
-                <view>
-                    <text class="clue">半年商票利润:</text>
-                    <text class="info">{{profitTotal.businessHalfYearMoneyTotal}}</text>
-                </view>
-                <view>
-                    <text class="clue">一年商票利润:</text>
-                    <text class="info">{{profitTotal.businessYearMoneyTotal}}</text>
+            <view class="profit-header-bill">
+                <view class="profit-bill-electro">
+                    <view>
+                        <text class="clue">半年电票利润:</text>
+                        <text class="info">{{profitTotal.electroHalfYearMoneyTotal}}</text>
+                    </view>
+                    <view>
+                        <text class="clue">一年电票利润:</text>
+                        <text class="info">{{profitTotal.electroYearMoneyTotal}}</text>
+                    </view>
                 </view>
             </view>
         </view>
-    </view>
-    <view class="profit-main">
+    </block>
+    <block wx:if="{{personalData.plusType==2 && personalData.uType==0}}">
+        <view class="profit-header">
+            <view class="profit-header-pro">
+                <view>
+                    <text class="clue">利润合计:</text>
+                    <text class="info">{{profitTotal.sum.subtotalProfitSum}}</text>
+                </view>
+                <view>
+                    <text class="clue">实际利润:</text>
+                    <text class="info">{{profitTotal.sun.subtotalActualSum}}</text>
+                </view>
+            </view>
+            <view class="profit-header-bill">
+                <view class="profit-bill-electro">
+                    <view>
+                        <text class="clue">半年电票利润:</text>
+                        <text class="info">{{profitTotal.electroHalfYearMoneyTotal}}</text>
+                    </view>
+                    <view>
+                        <text class="clue">一年电票利润:</text>
+                        <text class="info">{{profitTotal.electroYearMoneyTotal}}</text>
+                    </view>
+                </view>
+                <view class="profiy-bill-finance">
+                    <view>
+                        <text class="clue">半年财票利润:</text>
+                        <text class="info">{{profitTotal.financeHalfYearMoneyTotal}}</text>
+                    </view>
+                    <view>
+                        <text class="clue">一年财票利润:</text>
+                        <text class="info">{{profitTotal.financeYearMoneyTotal}}</text>
+                    </view>
+                </view>
+                <view class="profiy-bill-business">
+                    <view>
+                        <text class="clue">半年商票利润:</text>
+                        <text class="info">{{profitTotal.businessHalfYearMoneyTotal}}</text>
+                    </view>
+                    <view>
+                        <text class="clue">一年商票利润:</text>
+                        <text class="info">{{profitTotal.businessYearMoneyTotal}}</text>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </block>
+    <block wx:if="{{personalData.uType ==1 || personalData.uType ==2}}">
+        <view>该账号没有权限</view>
+    </block>
+    <block wx:if="{{personalData.uType > 2}}">
+        <view class="profit-header">
+            <view class="profitFen-header-pro">
+                <view>
+                    <text class="clue">一级分润合计:</text>
+                    <text class="info">{{profitFenTotal.sbdMarketerPercentSum}}</text>
+                </view>
+                <view>
+                    <text class="clue">二级分润合计:</text>
+                    <text class="info">{{profitFenTotal.sbdTwoPercentSum}}</text>
+                </view>
+                <view>
+                    <text class="clue">分润合计:</text>
+                    <text class="info">{{profitFenTotal.sbdPercentTotalSum}}</text>
+                </view>
+                <view>
+                    <text class="clue">分成合计:</text>
+                    <text class="info">{{profitFenTotal.nbYingTotalSum}}</text>
+                </view>
+            </view>
+        </view>
+    </block>
+    <view class="profit-main" wx:if="{{personalData.uType==0}}">
         <block wx:for="{{profitData}}" wx:key="{{index}}">
             <view class="profit-main-info">
                 <view class="profit-info-material">
                     <view class="profit-id">
-                        <text>{{item.noteprofitId}}</text>
+                        <text>{{item.noteBusinessId}}</text>
                     </view>
                     <view class="profit-bill-material">
                         <view class="profit-bill-material-item">
-                            <text class="clue">票据编号:</text>
+                            <text class="clue">银票编号:</text>
                             <text class="info">{{item.nbNumber}}</text>
                         </view>
-                        <view class="profit-bill-material-type">
-                            <text class="clue">票据类型:</text>
-                            <text>{{item.nType}}</text>
-                        </view>
                         <view class="profit-bill-material-time">
-                            <text class="clue">客户名称:</text>
-                            <text class="info">{{item.nbMarketer}}</text>
+                            <text class="clue">银票类型:</text>
+                            <text class="info">{{item.nBuyTypeName}}</text>
                             <text class="clue">交易日期:</text>
                             <text class="info">{{item.nbDate}}</text>
                         </view>
@@ -80,37 +129,91 @@
                 <view class="profit-info-figure">
                     <view class="profit-deal">
                         <view>
+                            <text class="clue">买入客户:</text>
+                            <text class="info">{{item.nbCustomer}}</text>
+                        </view>
+                        <view>
+                            <text class="clue">卖出客户:</text>
+                            <text class="info">{{item.nbCustomerBuy}}</text>
+                        </view>
+                        <view>
                             <text class="clue">票面金额:</text>
                             <text class="info">{{item.nbParValue}}</text>
                         </view>
-                        <view>
-                            <text class="clue">支付金额:</text>
-                            <text class="info">{{item.nbPayment}}</text>
-                        </view>
-                        <view>
-                            <text class="clue">实收金额:</text>
-                            <text class="info">{{item.nbNetReceipts}}</text>
-                        </view>
-                    </view>
-                    <view class="profit-revenue">
                         <view>
                             <text class="clue">成本:</text>
                             <text class="info">{{item.nbCost}}</text>
                         </view>
                         <view>
-                            <text class="clue">实际收入:</text>
-                            <text class="info">{{item.nbRealIncome}}</text>
+                            <text class="clue">实收金额:</text>
+                            <text class="info">{{item.nbNetReceipts}}</text>
                         </view>
                         <view>
-                            <text class="clue">扣息:</text>
-                            <text class="info">{{item.nbDiscount}}</text>
+                            <text class="clue">利润小计:</text>
+                            <text class="info">{{item.subtotalYingProfit}}</text>
                         </view>
                     </view>
                 </view>
-                <view class="profit-info-btn style-btn-bg">{{item.nbType}}</view>
+                <view class="profit-info-btn style-btn-bg">{{item.nbTypeName}}</view>
+            </view>
+        </block>
+    </view>
+    <view class="profit-main" wx:if="{{personalData.uType>2}}">
+        <block wx:for="{{profitFenData}}" wx:key="{{index}}">
+            <view class="profit-main-info">
+                <view class="profit-info-material">
+                    <view class="profit-id">
+                        <text>{{item.shareBenefitDetailId}}</text>
+                    </view>
+                    <view class="profit-bill-material">
+                        <view class="profit-bill-material-item">
+                            <text class="clue">银票编号:</text>
+                            <text class="info">{{item.sbdNumber}}</text>
+                        </view>
+                        <view class="profit-bill-material-type">
+                            <text class="clue">银票类型:</text>
+                            <text class="info">{{item.nTypeName}}</text>
+                            <text class="clue">客户名称:</text>
+                            <text class="info">{{item.sbdCustomer}}</text>
+                        </view>
+                        <view class="profit-bill-material-time">
+                            <text class="clue">票面金额:</text>
+                            <text class="info">{{item.sbdMoney}}</text>
+                            <text class="clue">交易日期:</text>
+                            <text class="info">{{item.sbdDate}}</text>
+                        </view>
+                    </view>
+                </view>
+                <view class="profit-info-figure">
+                    <view class="profit-deal">
+                        <view>
+                            <text class="clue">卖出分润类型:</text>
+                            <text class="info">{{item.nSaleTypeName}}</text>
+                        </view>
+                        <view>
+                            <text class="clue">买入分润类型:</text>
+                            <text class="info">{{item.nBuyTypeName}}</text>
+                        </view>
+                        <view>
+                            <text class="clue">一级分润提成:</text>
+                            <text class="info">{{item.sbdMarketerPercent}}</text>
+                        </view>
+                        <view>
+                            <text class="clue">二级分润提成:</text>
+                            <text class="info">{{item.sbdTwoPercent}}</text>
+                        </view>
+                        <view>
+                            <text class="clue">分成合计:</text>
+                            <text class="info">{{item.sbdPercentTotal}}</text>
+                        </view>
+                    </view>
+                </view>
             </view>
         </block>
     </view>
 </view>
-<view class="query" bindtap="goDemand">查询</view>
+<block wx:if="{{personalData.uType !=1 && personalData.uType !=2}}">
+    <view class="query" bindtap="goDemand">查询</view>
+</block>
+
 <view class="mask"></view>
